# github-actions

./: Dockerfile  docker-compose.yaml
.github/workflows/: docker_build.yaml  lint.yaml  tests.yaml
project/: .flake8  Dockerfile  pyproject.toml
project/app/: tests.py
project/project/: settings.py
