[tool.poetry]
name = "github-actions"
version = "0.1.0"
description = ""
authors = ["Aliaksandr Karpovich <alexsure.k@gmail.com>"]
readme = "README.md"
packages = [{include = "github_actions"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.4.2"]
build-backend = "poetry.core.masonry.api"
